--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
             <section class="skills">
                 <h2>Skills</h2>
                 <ul>
-                    <li>Proficient in C++, Python, Java languages.</li>
+                    <li>Proficient in C++, Python, Java languages with a minimum of 4 years of hands-on experience.</li>
                     <li>Fluency with databases: SQL, NoSQL (MongoDB) querying, database design, software integration</li>
-                    <li>Practical understanding of data structures and algorithms</li>
+                    <li>Extensive experience in systems architecture design, including continuous integration and delivery infrastructure.</li>
                     <li>Ability to work with Git, GitHub</li>
                     <li>Capable of learning and implementing APIs</li>
-                    <li>Trained to write clean, efficient, and well-documented code</li>
+                    <li>Solid knowledge of common data structures, design patterns, and algorithms, demonstrating systematic thinking and architectural abstraction capability.</li>
                     <li>Ability to test, troubleshoot and debug software</li>
-                    <li>Familiarity with JavaScript, CSS, HTML</li>
-                    <li>Knowledge of Node.js</li>
-                    <li>Understanding of core principles of UX and UI</li>
+                    <li>First-class analytical, diagnostic, and problem-solving skills</li>
+                    <li>Excellent verbal and written communication skills, with the ability to collaborate effectively with developers, product owners, and team members</li>
+                    <li>Quick learner with a passion for working in a fast-paced environment to deliver new technologies and products to the marketplace.</li>
                 </ul>
             </section>
 
