--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                     </li>
                 </ul>
             </section>
+            <section class="eligible">
+                <h2>Eligibility</h2>
+                <p>Eligible to work in Canada.</p>
+            </section>
             </div>
     </div>
 
