--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
             <section class="skills">
                 <h2>Skills</h2>
                 <ul>
-                    <li>Proficient in C++, Python, Java languages with a minimum of 4 years of hands-on experience.</li>
+                    <li>Proficient in JavaScript, C++, Python languages with a 4 years of hands-on experience.</li>
                     <li>Fluency with databases: SQL, NoSQL (MongoDB) querying, database design, software integration</li>
                     <li>Extensive experience in systems architecture design, including continuous integration and delivery infrastructure.</li>
                     <li>Ability to work with Git, GitHub</li>
+                    <li>Proffeciency and deep understanding of HTML and CSS</li>
                     <li>Capable of learning and implementing APIs</li>
-                    <li>Solid knowledge of common data structures, design patterns, and algorithms, demonstrating systematic thinking and architectural abstraction capability.</li>
+                    <li>Proficiency with React</li>
+                    <li>Extensive usage and profeciency with Node.js</li>
                     <li>Ability to test, troubleshoot and debug software</li>
-                    <li>First-class analytical, diagnostic, and problem-solving skills</li>
                     <li>Excellent verbal and written communication skills, with the ability to collaborate effectively with developers, product owners, and team members</li>
                     <li>Quick learner with a passion for working in a fast-paced environment to deliver new technologies and products to the marketplace.</li>
                 </ul>
